# energytrace-util

./: .gitignore  CMakeLists.txt  MSP430.def  Makefile  README.md  energytrace.c
.github/workflows/: build-windows.yml
Inc/: MSP430.h  MSP430_EEM.h  MSP430_FET.h
